# aria

./: .gitignore  README.md  pyproject.toml
aria/: __init__.py  __main__.py  cli.py
aria/backends/: __init__.py
aria/backends/ort/: __init__.py  build.py  executor.py
aria/backends/qnn/: executor.py
aria/backends/torch/: __init__.py  executor.py  model.py
aria/backends/trt/: __init__.py  build.py  executor.py
aria/core/: __init__.py  executor.py  kv_cache.py  memory.py  prefix_cache.py  scheduler.py
aria/models/: __init__.py  ar_decoder.py  base.py  flow_decoder.py  llm_backbone.py  text_decoder.py  vision_encoder.py
aria/runtime/: __init__.py  llm_runtime.py  session.py  vla_runtime.py  vlm_runtime.py
aria/serve/: README.md  app.py  schema.py  server.py
aria/tools/: build_dummy_engines.py
configs/: llm_qwen3.yaml  vla_demo_orin.yaml  vla_openvla.yaml  vla_pi0.yaml  vlm_qwen3.yaml
docs/: architecture.md  kvcache_and_memory.md
docs/others/: inference_flow.md
examples/: serve_client.py
tests/: export_decode_check.py  parity_decode.py  test_mock.py  test_torch.py
tools/: README.md  build_engines.py  export_hf.py
tools/backends/: __init__.py
tools/backends/ort/: build.py
tools/backends/qnn/: build.py
tools/backends/trt/: build.py
tools/exporters/: __init__.py  base.py  qwen3.py
