[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "aria"
version         = "0.1.0"
description     = "Action Reasoning Inference Accelerator — 端侧 NPU 推理框架（VLA / VLM）"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"
authors         = [{ name = "ARIA contributors" }]
keywords        = ["npu", "vla", "vlm", "edge-ai", "inference"]
classifiers     = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
]
# PyTorch 参考后端：纯 Python，CPU 可跑，用来在没有 NPU 的环境
# 做实际能算的 debug（特别是验证 KV cache / 前缀缓存语义）。
torch = [
    "torch>=2.1.0",
]
# HuggingFace → ONNX 导出工具链（离线转换，不随运行时部署）。
export = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "onnx>=1.14.0",
    "safetensors>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
]
# Orin / 桌面 CUDA 上的 TensorRT 后端。
# tensorrt / cuda-python 在 Jetson 镜像上通常已预装，
# 但这里仍然声明，方便其他平台对齐版本。
trt = [
    "tensorrt>=10.0",
    "cuda-python>=12.0",
]
# ONNXRuntime 后端：用来演示"权重一份 + 多图共享"，TRT 做不到这件事。
ort = [
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
]
# OpenAI 兼容推理服务依赖
serve = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "transformers>=4.40.0",
]

[project.scripts]
aria        = "aria.cli:main"
aria-build  = "tools.build_engines:main"
aria-export = "tools.export_hf:main"
aria-serve  = "aria.serve.server:main"

[project.urls]
Homepage = "https://github.com/"

[tool.setuptools.packages.find]
include = ["aria*", "tools*"]
exclude = ["tests*", "configs*"]
